Updated blog, home page, cv page

--- a/_posts/2019-11-11-fila.md
+++ b/_posts/2019-11-11-fila.md
@@ -1,5 +1,5 @@
 ---
-title:  "Basics of Reinforcement Learning"
+title:  "An Introduction to Multi-Armed Bandits and Markov Decison Processes"
 date:   2019-11-11
 permalink: /posts/2019/fila-summary
 tags:
@@ -9,7 +9,7 @@ tags:
   - concentration-inequalities
 ---
 
-I took the course <i>Foundations of Intelligent and Learning Agents</i> in Autumn 2019 offered by [Prof. Shivaram Kalyanakrishnan](https://www.cse.iitb.ac.in/~shivaram/) at IIT Bombay. I found the course content very exciting and decided to share some basic intuition and ideas from reinforcement learning in this blog post. 
+I took the course <i>Foundations of Intelligent and Learning Agents</i> in Autumn 2019 offered by [Prof. Shivaram Kalyanakrishnan](https://www.cse.iitb.ac.in/~shivaram/) at IIT Bombay. I found the course content very exciting and decided to share some basic intuition and ideas from multi-armed bandits and Markov decision processes in this blog post. 
 
 Consider an intelligent agent $M$ in an environment $E$ where it can take possible actions $A = \{a_1, \cdots, a_n\}$. At each discrete time step $t$, the agent will get a reward $r_t$ and it will move in the state space from its previous state $s_t$ to $s_{t+1}$. The objective of the agent is to maximize its cumulative reward in the long run i.e. $\sum_{t=1}^{\infty} r_t$. 
 
@@ -125,9 +125,15 @@ $$\hat{R}(s, a, s') = \frac{\sum_t r^t \mathbb{1}_{s^t=s,a^t=a,s^{t+1}=s'}}{\sum
 
 Such algorithms which keep an estimate of the model of size complexity 
 $$O(|S|^2 |A|)$$
-are called model-based algorithms. On the contrary, we have model-free algorithms that have lower size complexity as we will see later.
+are called model-based algorithms. On the contrary, we have model-free algorithms that have lower size complexity.
 
-<b> This post is a <i>work in progress</i>. I'm currently working on a paper deadline and I hope to get back and finish it as soon as possible, probably by the end of 2019. </b>
+<h2>Further Reading</h2>
+
+To study algorithms and theory of reinforcement learning, I highly recommend the book 'Reinforcement Learning: An Introduction (second edition)' by Richard S. Sutton and Andrew G. Barto ([goodreads](https://www.goodreads.com/book/show/39813875-reinforcement-learning-second-edition)). I followed this book throughout the course and found it to be very well-written and engaging. A lot of notation I've used above is taken from this book as well (and some more from my class notes).
+
+
+
+<!-- <b> This post is a <i>work in progress</i>. I'm currently working on a paper deadline and I hope to get back and finish it as soon as possible, probably by the end of 2019. </b> -->
 
 <!--
 
